--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,4 +32,4 @@ services:
       - '3306'
       # Where our data will be persisted
     volumes:
-      - '${MYSQL_VOLUME_PATH}:/var/lib/mysql'
+      - '${MYSQL_VOLUME_PATH}:/vusr/src/mysql'
